Revert "Revert "Merge branch 'dev' into JOH-37/docker""
This reverts commit 6b487dc09f348f0205442a6e5b11b8fe28f2382a.
