# src/app/handler/pet/pet.handler.go
@@ -9,7 +9,7 @@ import (
 	imageSvc "github.com/isd-sgcu/johnjud-gateway/src/app/handler/image"
 	"github.com/isd-sgcu/johnjud-gateway/src/app/router"
 	"github.com/isd-sgcu/johnjud-gateway/src/app/validator"
-	petProto "github.com/isd-sgcu/johnjud-go-proto/johnjud/backend/pet/v1"
+	petconst "github.com/isd-sgcu/johnjud-gateway/src/constant/pet"
 )
 
 type Handler struct {
@@ -19,12 +19,12 @@ type Handler struct {
 }
 
 type Service interface {
-	FindAll() ([]*petProto.Pet, *dto.ResponseErr)
-	FindOne(string) (*petProto.Pet, *dto.ResponseErr)
-	Create(*dto.CreatePetRequest) (*petProto.Pet, *dto.ResponseErr)
-	Update(string, *dto.UpdatePetRequest) (*petProto.Pet, *dto.ResponseErr)
-	ChangeView(string, *dto.ChangeViewPetRequest) (bool, *dto.ResponseErr)
-	Delete(string) (bool, *dto.ResponseErr)
+	FindAll() ([]*dto.PetResponse, *dto.ResponseErr)
+	FindOne(string) (*dto.PetResponse, *dto.ResponseErr)
+	Create(*dto.CreatePetRequest) (*dto.PetResponse, *dto.ResponseErr)
+	Update(string, *dto.UpdatePetRequest) (*dto.PetResponse, *dto.ResponseErr)
+	ChangeView(string, *dto.ChangeViewPetRequest) (*dto.ChangeViewPetResponse, *dto.ResponseErr)
+	Delete(string) (*dto.DeleteResponse, *dto.ResponseErr)
 }
 
 func NewHandler(service Service, imageService imageSvc.Service, validate validator.IDtoValidator) *Handler {
@@ -48,7 +48,11 @@ func (h *Handler) FindAll(c router.IContext) {
 		return
 	}
 
-	c.JSON(http.StatusOK, response)
+	c.JSON(http.StatusOK, dto.ResponseSuccess{
+		StatusCode: http.StatusOK,
+		Message:    petconst.FindAllPetSuccessMessage,
+		Data:       response,
+	})
 	return
 }
 
@@ -67,7 +71,7 @@ func (h *Handler) FindAll(c router.IContext) {
 func (h *Handler) FindOne(c router.IContext) {
 	id, err := c.Param("id")
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, &dto.ResponseErr{
+		c.JSON(http.StatusInternalServerError, dto.ResponseErr{
 			StatusCode: http.StatusInternalServerError,
 			Message:    "Invalid ID",
 			Data:       nil,
@@ -81,7 +85,11 @@ func (h *Handler) FindOne(c router.IContext) {
 		return
 	}
 
-	c.JSON(http.StatusOK, response)
+	c.JSON(http.StatusOK, dto.ResponseSuccess{
+		StatusCode: http.StatusOK,
+		Message:    petconst.FindOnePetSuccessMessage,
+		Data:       response,
+	})
 	return
 }
 
@@ -98,9 +106,7 @@ func (h *Handler) FindOne(c router.IContext) {
 // @Failure 503 {object} dto.ResponseServiceDownErr "Service is down"
 // @Router /v1/pets/create [post]
 func (h *Handler) Create(c router.IContext) {
-	request := &dto.CreatePetRequest{
-		Pet: &dto.PetDto{},
-	}
+	request := &dto.CreatePetRequest{}
 	err := c.Bind(request)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, dto.ResponseErr{
@@ -130,7 +136,11 @@ func (h *Handler) Create(c router.IContext) {
 		return
 	}
 
-	c.JSON(http.StatusCreated, response)
+	c.JSON(http.StatusCreated, dto.ResponseSuccess{
+		StatusCode: http.StatusCreated,
+		Message:    petconst.CreatePetSuccessMessage,
+		Data:       response,
+	})
 	return
 }
 
@@ -158,9 +168,7 @@ func (h *Handler) Update(c router.IContext) {
 		return
 	}
 
-	request := &dto.UpdatePetRequest{
-		Pet: &dto.PetDto{},
-	}
+	request := &dto.UpdatePetRequest{}
 
 	err = c.Bind(request)
 	if err != nil {
@@ -191,7 +199,11 @@ func (h *Handler) Update(c router.IContext) {
 		return
 	}
 
-	c.JSON(http.StatusOK, pet)
+	c.JSON(http.StatusOK, dto.ResponseSuccess{
+		StatusCode: http.StatusOK,
+		Message:    petconst.UpdatePetSuccessMessage,
+		Data:       pet,
+	})
 	return
 }
 
@@ -211,7 +223,7 @@ func (h *Handler) Update(c router.IContext) {
 func (h *Handler) ChangeView(c router.IContext) {
 	id, err := c.Param("id")
 	if err != nil {
-		c.JSON(http.StatusBadRequest, &dto.ResponseErr{
+		c.JSON(http.StatusBadRequest, dto.ResponseErr{
 			StatusCode: http.StatusBadRequest,
 			Message:    err.Error(),
 			Data:       nil,
@@ -250,7 +262,11 @@ func (h *Handler) ChangeView(c router.IContext) {
 		return
 	}
 
-	c.JSON(http.StatusOK, res)
+	c.JSON(http.StatusOK, dto.ResponseSuccess{
+		StatusCode: http.StatusOK,
+		Message:    petconst.ChangeViewPetSuccessMessage,
+		Data:       res,
+	})
 	return
 }
 
@@ -269,7 +285,7 @@ func (h *Handler) ChangeView(c router.IContext) {
 func (h *Handler) Delete(c router.IContext) {
 	id, err := c.Param("id")
 	if err != nil {
-		c.JSON(http.StatusBadRequest, &dto.ResponseErr{
+		c.JSON(http.StatusBadRequest, dto.ResponseErr{
 			StatusCode: http.StatusBadRequest,
 			Message:    err.Error(),
 			Data:       nil,
@@ -283,6 +299,10 @@ func (h *Handler) Delete(c router.IContext) {
 		return
 	}
 
-	c.JSON(http.StatusOK, res)
+	c.JSON(http.StatusOK, dto.ResponseSuccess{
+		StatusCode: http.StatusOK,
+		Message:    petconst.DeletePetSuccessMessage,
+		Data:       res,
+	})
 	return
 }
